loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:2: error: not found: value avancer
  avancer();
  ^